--- a/html_tag.html
+++ b/html_tag.html
@@ -121,9 +121,29 @@
       </tr>
     </table>
   </div>
+  <hr>
   <div>
     <p>이미지를 화면에 넣습니다.</p>
-    <img src="">
+    <img src="./book-icon.png" alt="대체텍스트">
+    <p>img 태그를 사용합니다.</p>
+  </div>
+  <div>
+    <fieldset>
+      <legend>동영상</legend>
+      <video src="./flight.mp4" controls></video>
+      <span>동영상은 video 태그, 음악은 audio 태그를 사용합니다.<br>
+      src 속성에 경로+파일을 지정하고, controls 속성을 넣어서 play할 수 있도록 만들어 주시면 됩니다.
+      </span>
+    </fieldset>
+    <fieldset>
+      <legend>하이퍼 링크</legend>
+      <ul>
+        <li>하이퍼 링크는 a 태그를 사용합니다.</li>
+        <li>href 속성에 주소를 입력하여 이동할 수 있도록 만들어 줍니다.</li>
+        <li><a href="http://www.naver.com">네이버</a></li>
+        <li><a href="http://www.naver.com"><button>네이버</button></a></li>
+      </ul>
+    </fieldset>
   </div>
 </body>
 </html>
