--- a/html_tag.html
+++ b/html_tag.html
@@ -142,6 +142,9 @@
         <li>href 속성에 주소를 입력하여 이동할 수 있도록 만들어 줍니다.</li>
         <li><a href="http://www.naver.com">네이버</a></li>
         <li><a href="http://www.naver.com"><button>네이버</button></a></li>
+        <li><a href="http://www.naver.com"><img src="./naver.jpg"></a></li>
+        <li><a href="http://www.naver.com" target="_blank">네이버(새탭)a태그에 target="_blank"속성 지정
+        </a></li>
       </ul>
     </fieldset>
   </div>
