--- a/css_bs4_01.html
+++ b/css_bs4_01.html
@@ -20,6 +20,9 @@
       border: 1px solid blue;
       margin-top: 10px;
     }
+    #rounded2 {
+      border-radius: 30px;
+    }
   </style>
 </head>
 <body>
@@ -155,6 +158,15 @@
           </tr>
         </tbody>
       </table>
+    </div>
+    <div>
+      <h3>이미지관련</h3>
+      <div id="rounded2">
+        <img src="./bg0.jpg" width="200" height="100" class="rounded">
+      </div>
+      <img src="./bg2.jpg" width="200" height="100" class="rounded-circle">
+      <img src="./bg5.jpg" width="200" height="100" class="img-thumbnail">
+      <br><br>
     </div>
   </div>
 </body>
