--- a/css_bs4_01.html
+++ b/css_bs4_01.html
@@ -20,9 +20,10 @@
       border: 1px solid blue;
       margin-top: 10px;
     }
-    #rounded2 {
-      border-radius: 30px;
+    .rounded2 {
+      border-radius: 20px !important;
     }
+    /* css에서 !important 가 최우선 적용됩니다. */
   </style>
 </head>
 <body>
@@ -161,9 +162,8 @@
     </div>
     <div>
       <h3>이미지관련</h3>
-      <div id="rounded2">
-        <img src="./bg0.jpg" width="200" height="100" class="rounded">
-      </div>
+      <img src="./bg0.jpg" width="200" height="100" class="rounded rounded2">
+      <img src="./bg0.jpg" width="200" height="100" class="rounded">
       <img src="./bg2.jpg" width="200" height="100" class="rounded-circle">
       <img src="./bg5.jpg" width="200" height="100" class="img-thumbnail">
       <br><br>
