--- a/css_bs4_03.html
+++ b/css_bs4_03.html
@@ -185,6 +185,36 @@
         <input type="text" class="form-control">
       </div>
     </form>
+    <hr>
+    <div class="carousel slide" id="demo" width="300px" height="200px">
+      <!-- 이미지로 바로 갈 수 있도록 구현 -->
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+      </ul>
+
+      <!-- slide show -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./bg0.jpg">
+        </div>
+        <div class="carousel-item">
+          <img src="./bg2.jpg">
+        </div>
+        <div class="carousel-item">
+          <img src="./bg5.jpg" >
+        </div>
+      </div>
+
+      <!-- 좌/우 버튼 -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
   </div><!-- end of class="container"-->
 </body>
 </html>
