--- a/css_bs4_03.html
+++ b/css_bs4_03.html
@@ -186,7 +186,7 @@
       </div>
     </form>
     <hr>
-    <div class="carousel slide" id="demo" width="300px" height="200px">
+    <div class="carousel slide" id="demo" style="width:300px; height:200px;">
       <!-- 이미지로 바로 갈 수 있도록 구현 -->
       <ul class="carousel-indicators">
         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -197,13 +197,13 @@
       <!-- slide show -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./bg0.jpg">
+          <img src="./bg0.jpg" style="width:300px; height:200px;">
         </div>
         <div class="carousel-item">
-          <img src="./bg2.jpg">
+          <img src="./bg2.jpg" style="width:300px; height:200px;">
         </div>
         <div class="carousel-item">
-          <img src="./bg5.jpg" >
+          <img src="./bg5.jpg" style="width:300px; height:200px;">
         </div>
       </div>
 
