--- a/css_bs4_03.html
+++ b/css_bs4_03.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <title>Bootstrap4</title>
   <meta charset="UTF-8">
@@ -8,6 +8,16 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    .carousel {
+      width: 400px;  /* 원하는 너비로 조정 */
+      height: 300px;  /* 원하는 높이로 조정 */
+    }
+    .carousel-item img {
+      height: 300px;
+      object-fit: cover; /* 이미지를 잘라서 크기에 맞추기 */
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -186,34 +196,36 @@
       </div>
     </form>
     <hr>
-    <div class="carousel slide" id="demo" style="width:300px; height:200px;">
-      <!-- 이미지로 바로 갈 수 있도록 구현 -->
-      <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-      </ul>
+    <div class="container d-flex justify-content-center">
+      <div class="carousel slide" id="demo">
+        <!-- 이미지로 바로 갈 수 있도록 구현 -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
 
-      <!-- slide show -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./bg0.jpg" style="width:300px; height:200px;">
+        <!-- slide show -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./bg0.jpg" class="d-block">
+          </div>
+          <div class="carousel-item">
+            <img src="./bg2.jpg" class="d-block">
+          </div>
+          <div class="carousel-item">
+            <img src="./bg5.jpg" class="d-block">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="./bg2.jpg" style="width:300px; height:200px;">
-        </div>
-        <div class="carousel-item">
-          <img src="./bg5.jpg" style="width:300px; height:200px;">
-        </div>
+
+        <!-- 좌/우 버튼 -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
       </div>
-
-      <!-- 좌/우 버튼 -->
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
     </div>
   </div><!-- end of class="container"-->
 </body>
